--- a/wrr/styles/style.css
+++ b/wrr/styles/style.css
@@ -49,7 +49,7 @@ nav a:hover {
     background-color: #242d35;
 }
 footer {
-    background-color: #242d35;
+    background-color: #d9c2a3;
 }
 footer h3 {
     color:#d9c2a3;
