--- a/wrr/styles/style.css
+++ b/wrr/styles/style.css
@@ -59,7 +59,7 @@ footer a {
     text-decoration: none;
 }
 footer a:hover {
-    color:rgb(56, 56, 95);
+    color:#d9c2a3;
 }
 footer h3 a:hover {
     text-decoration: underline;
