--- a/wrr/styles/style.css
+++ b/wrr/styles/style.css
@@ -49,17 +49,17 @@ nav a:hover {
     background-color: #242d35;
 }
 footer {
-    background-color: #d9c2a3;
+    background-color: #242d35;
 }
 footer h3 {
-    color: black;
+    color:#d9c2a3;
 }
 footer a {
     color:#d9c2a3;
     text-decoration: none;
 }
 footer a:hover {
-    color:#d9c2a3;
+    color: #728da1;
 }
 footer h3 a:hover {
     text-decoration: underline;
@@ -77,5 +77,5 @@ h4 {
     width: 80px;
 }
 #hero-img {
-    width: 100%;
+    width:100%;
 }
