--- a/wrr/styles/style.css
+++ b/wrr/styles/style.css
@@ -28,7 +28,7 @@ main section {
     margin-top: 10px;
 }
 body {
-    font-family: "Playfair Display", 'Quicksand', 'Helvetica', sans-serif;
+    font-family: 'Quicksand', 'Helvetica', sans-serif;
     background-color: #fcfbfb;
     font-size: 22px;
     margin: 0;
