--- a/wrr/styles/style.css
+++ b/wrr/styles/style.css
@@ -1,6 +1,60 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,500&family=Quicksand:wght@500&display=swap');
 
 
+header {
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+#hero-msg h4 {
+    color: white;
+}
+#hero-msg h1 {
+    color:  #d9c2a3;
+}
+.home-grid {
+    display: grid;
+    grid-template-columns: 1 3fr 3fr 3fr;
+}
+.card-img, .mountains {
+    width: 100%;
+}
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -26,6 +80,8 @@ main section {
     background-color: #b7a393;
     padding-top: 10px;
     margin-top: 10px;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 body {
     font-family: 'Quicksand', 'Helvetica', Arial, sans-serif;
@@ -73,11 +129,17 @@ nav a:hover {
     background-color: #242d35;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 footer {
     background-color: #242d35;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer h3 {
     color:#d9c2a3;
@@ -114,10 +176,64 @@ h4 {
 }
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 #hero-img {
     width:100%;
 }
 .card-img {
     border: 10px solid #b7a393;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
 }
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
+           
