--- a/wrr/styles/style.css
+++ b/wrr/styles/style.css
@@ -171,12 +171,14 @@ h4 {
     width: 80px;
     padding-top: 10px;
 }
-
+.logo {
+    width: 80px;
+}
 #logo_link {
     padding-top: 5px;
     justify-self: center;
     align-self: center;
-    width: 80px;
+  
 }
 #hero-img {
     width:100%;
