--- a/wrr/styles/style.css
+++ b/wrr/styles/style.css
@@ -32,7 +32,7 @@ nav {
 }
 .home-grid {
     display: grid;
-    grid-template-columns: 1 3fr 3fr 3fr;
+    grid-template-columns: 1/10fr;
 }
 .card-img, .mountains {
     width: 100%;
@@ -168,8 +168,8 @@ h4 {
     font-family: Quicksand ;
 }
 .icon {
-    width: 80px;
     padding-top: 10px;
+    width: 80px;
 }
 .logo {
     width: 80px;
