--- a/wrr/styles/style.css
+++ b/wrr/styles/style.css
@@ -45,8 +45,9 @@ nav {
     color:  #d9c2a3;
 }
 .home-grid {
+    justify-content: space-between;
     display: grid;
-    grid-template-columns: 1/10fr;
+    grid-template-columns: 10px auto
 }
 .card-img, .mountains {
     width: 100%;
@@ -58,6 +59,7 @@ nav {
 .camping-card {
     grid-column: 5/7;
     grid-row: 2/3;
+    
 }
 .rapids-card {
     grid-column: 8/10;
