--- a/wrr/styles/style.css
+++ b/wrr/styles/style.css
@@ -45,7 +45,7 @@ nav {
     color:  #d9c2a3;
 }
 .home-grid {
-    justify-content: space-between;
+    justify-content: space-around;
     display: grid;
     grid-template-columns: 10px auto
 }
@@ -59,7 +59,7 @@ nav {
 .camping-card {
     grid-column: 5/7;
     grid-row: 2/3;
-    
+    padding-left: 10px;
 }
 .rapids-card {
     grid-column: 8/10;
