--- a/web/styles/site-plan.css
+++ b/web/styles/site-plan.css
@@ -1,29 +1,29 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,500&family=Quicksand:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital@1&family=Playfair+Display:ital,wght@1,500&family=Quicksand&family=Roboto:ital,wght@0,400;1,300&display=swap');
 
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #242d35;
-  --secondary-color: #cdd5d9 ;
-  --accent1-color: #728da1;
-  --accent2-color: #b7a393;
+  --primary-color: #253849;
+  --secondary-color: #798E98 ;
+  --accent1-color: #062E84;
+  --accent2-color: #AB7E5A;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Playfair Display";
-  --paragraph-font: Quicksand, Helvetica, sans-serif;
+  --paragraph-font: Roboto, Helvetica, sans-serif;
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
+  --headline-color-on-white: #275f88;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: #091f30; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
+  --paragraph-background-color: #275f88  ;
   --nav-link-color: white;
   --nav-background-color: #242d35  ;
   --nav-hover-link-color: black;
-  --nav-hover-background-color:  #b7a393;
+  --nav-hover-background-color:#AB7E5A;
 }
 
 
