--- a/wrr/styles/style.css
+++ b/wrr/styles/style.css
@@ -28,6 +28,9 @@ nav {
     grid-template-columns: 1fr 3fr 1fr;
     margin-top: -100px;
 }
+img {
+    width:80px;
+}
 #hero-box {
     grid-column: 1/4;
     grid-row: 1/3;
@@ -47,7 +50,7 @@ nav {
 .home-grid {
     justify-content: space-around;
     display: grid;
-    grid-template-columns: 10px auto
+    grid-template-columns: repeat(10, 1fr)
 }
 .card-img, .mountains {
     width: 100%;
