--- a/wrr/styles/style.css
+++ b/wrr/styles/style.css
@@ -257,3 +257,35 @@ h4 {
     }
 }
            
+
+
+/****subpage**/
+.column {
+
+    display: flex;
+    width: 50%;
+    padding: 5px;
+    text-align: center;
+  }
+  
+  /* Clear floats after image containers */
+  .row {
+    display: flex;
+
+
+  }
+.text {
+    width: auto;
+    margin-right: auto;
+    min-width: 50%;
+}
+.two {
+    display: block;
+}
+.row-grid {
+    border: 3px saddlebrown;
+    display: flex;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(10, 1fr)
+}
