--- a/wrr/styles/style.css
+++ b/wrr/styles/style.css
@@ -215,6 +215,41 @@ h4 {
 
 
 
+/****subpage**/
+.column {
+ 
+    width: 50%;
+    padding: 5px;
+    text-align: center;
+  }
+  
+  /* Clear floats after image containers */
+  .row {
+    display: flex;
+
+
+  }
+.text {
+    width: auto;
+    margin-right: auto;
+    margin-top: 100px;
+    
+}
+.two {
+    display: block;
+    margin: 0 auto;
+    width: 80%;
+    margin-top: 100px;
+}
+.row-grid {
+    border: 3px saddlebrown;
+    display: flex;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(10, 1fr)
+}
+
+
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
@@ -255,37 +290,12 @@ h4 {
     footer {
         margin-top: 25px;
     }
+    .row {
+        display:block;
+    }
+    .column {
+        width: 90px;
+    }
 }
            
 
-
-/****subpage**/
-.column {
-
-    display: flex;
-    width: 50%;
-    padding: 5px;
-    text-align: center;
-  }
-  
-  /* Clear floats after image containers */
-  .row {
-    display: flex;
-
-
-  }
-.text {
-    width: auto;
-    margin-right: auto;
-    
-}
-.two {
-    display: block;
-}
-.row-grid {
-    border: 3px saddlebrown;
-    display: flex;
-    margin: auto;
-    display: grid;
-    grid-template-columns: repeat(10, 1fr)
-}
