--- a/wrr/styles/style.css
+++ b/wrr/styles/style.css
@@ -1,73 +1,88 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,500&family=Quicksand:wght@500&display=swap');
 
 @font-face {
-    font-family : 'Playfair Display';
-    font-style : italic;
-    font-weight : 500;
-    font-display : swap;
-    src : url(https://fonts.gstatic.com/s/playfairdisplay/v29/nuFRD-vYSZviVYUb_rj3ij__anPXDTnCjmHKM4nYO7KN_pqTbtY.ttf) format('truetype');
+    font-family: 'Playfair Display';
+    font-style: italic;
+    font-weight: 500;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/playfairdisplay/v29/nuFRD-vYSZviVYUb_rj3ij__anPXDTnCjmHKM4nYO7KN_pqTbtY.ttf) format('truetype');
 }
- @font-face {
-    font-family : 'Quicksand';
-    font-style : normal;
-    font-weight : 500;
-    font-display : swap;
-    src : url(https://fonts.gstatic.com/s/quicksand/v29/6xK-dSZaM9iE8KbpRA_LJ3z8mH9BOJvgkM0o18E.ttf) format('truetype');
+
+@font-face {
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/quicksand/v29/6xK-dSZaM9iE8KbpRA_LJ3z8mH9BOJvgkM0o18E.ttf) format('truetype');
 }
 
 header {
     display: grid;
     grid-template-columns: 150px auto;
 }
+
 nav {
     display: flex;
     justify-content: space-around;
 }
+
 #hero {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     margin-top: -100px;
 }
+
 img {
-    width:80px;
+    width: 80px;
 }
+
 #hero-box {
     grid-column: 1/4;
     grid-row: 1/3;
     z-index: -1;
 }
+
 #hero-msg {
     grid-column: 2/3;
     grid-row: 1/2;
     margin-top: 100px;
 }
+
 #hero-msg h4 {
     color: white;
 }
+
 #hero-msg h1 {
-    color:  #d9c2a3;
+    color: #d9c2a3;
 }
+
 .home-grid {
     justify-content: space-around;
     display: grid;
     grid-template-columns: repeat(10, 1fr)
 }
-.card-img, .mountains {
+
+.card-img,
+.mountains {
     width: 100%;
 }
+
 .rivers-card {
     grid-column: 2/4;
     grid-row: 2/3;
 }
+
 .camping-card {
     grid-column: 5/7;
     grid-row: 2/3;
     padding-left: 10px;
 }
+
 .rapids-card {
     grid-column: 8/10;
     grid-row: 2/3;
 }
+
 .mountains {
     grid-column: 2/7;
     grid-row: 5/8;
@@ -78,23 +93,29 @@ img {
     max-width: 1600px;
     margin: 0 auto;
 }
-nav a  {
+
+nav a {
     text-align: center;
     color: beige;
     text-decoration: none;
     padding: 35px;
 }
-#hero-msg h1, #hero-msg h4 {
+
+#hero-msg h1,
+#hero-msg h4 {
     text-align: center;
 }
+
 .button-box {
     text-align: center;
 }
+
 main section {
     text-align: center;
     box-sizing: border-box;
 }
-#background{
+
+#background {
     height: 725px;
     background-color: #b7a393;
     padding-top: 10px;
@@ -102,6 +123,7 @@ main section {
     grid-column: 1/11;
     grid-row: 4/9;
 }
+
 body {
     font-family: 'Quicksand', 'Helvetica', Arial, sans-serif;
     background-color: #fcfbfb;
@@ -109,17 +131,22 @@ body {
     margin: 0;
     padding: 0;
 }
+
 h2 {
     margin: 0;
 }
+
 header {
     background-color: #728da1;
 }
+
 nav a:hover {
     background-color: #b7a393;
     color: black;
 }
-.book, .join {
+
+.book,
+.join {
     font-size: 18px;
     background-color: #242d35;
     color: white;
@@ -128,22 +155,30 @@ nav a:hover {
     margin-top: 50px;
     border-radius: 5px;
 }
-.rivers-card, .camping-card, .rapids-card {
+
+.rivers-card,
+.camping-card,
+.rapids-card {
     margin: 200px 0;
 }
-.book:hover, .join:hover {
+
+.book:hover,
+.join:hover {
     background-color: #b7a393;
     color: black;
 }
+
 .msg h2 {
-    color:#d9c2a3;
-    font-family: Quicksand ;
+    color: #d9c2a3;
+    font-family: Quicksand;
 }
+
 .msg p {
     font-size: .8em;
-    color:#d9c2a3;
+    color: #d9c2a3;
     padding-bottom: 15px;
 }
+
 .msg {
     background-color: #242d35;
     line-height: 1.5em;
@@ -152,6 +187,7 @@ nav a:hover {
     grid-row: 6/7;
     box-shadow: 5px 5px 10px #6f7364;
 }
+
 footer {
     background-color: #242d35;
     padding: 25px 50px;
@@ -160,53 +196,66 @@ footer {
     justify-content: space-around;
     align-items: center;
 }
+
 footer h3 {
-    color:#d9c2a3;
+    color: #d9c2a3;
 }
+
 footer a {
-    color:#d9c2a3;
+    color: #d9c2a3;
     text-decoration: none;
 }
+
 .footer .social img {
     padding-top: 15px;
 }
+
 footer a:hover {
     color: #728da1;
 }
+
 footer h3 a:hover {
     text-decoration: underline;
 }
+
 .home-title {
     font-size: 2em;
     color: #242d35;
     font-family: "Playfair Display";
     margin-top: 10px;
 }
+
 h4 {
     color: black;
-    font-family: Quicksand ;
+    font-family: Quicksand;
 }
+
 .icon {
     padding-top: 10px;
     width: 80px;
 }
+
 .logo {
     width: 80px;
 }
+
 #logo_link {
     padding-top: 5px;
     justify-self: center;
     align-self: center;
-  
+
 }
+
 #hero-img {
-    width:100%;
+    width: 100%;
 }
+
 .card-img {
     border: 10px solid #b7a393;
     transition: transform .5s;
     box-shadow: 5px 5px 10px #6f7364;
 }
+
 .card-img:hover {
     opacity: .6;
     transform: scale(1.1);
@@ -217,30 +266,33 @@ h4 {
 
 /****subpage**/
 .column {
- 
+
     width: 50%;
     padding: 5px;
     text-align: center;
-  }
-  
-  /* Clear floats after image containers */
-  .row {
+}
+
+/* Clear floats after image containers */
+.row {
     display: flex;
 
 
-  }
+}
+
 .text {
     width: auto;
     margin-right: auto;
     margin-top: 100px;
-    
+
 }
+
 .two {
     display: block;
     margin: 0 auto;
     width: 80%;
     margin-top: 100px;
 }
+
 .row-grid {
     border: 3px saddlebrown;
     display: flex;
@@ -250,134 +302,67 @@ h4 {
 }
 
 
-/**CONTACTS INFO **/
-#feedback {
-    background-color: antiquewhite;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    padding: .5em;
-    /* make this element invisible until we are ready for it */
-    display: none;       
-}
-.moveDown {
-    margin-top: 3em;
-}
-
-form {
-    /* Center the form on the page */
-    margin: 0 auto;
-    width: 400px;
-    /* Form outline */
-    padding: 1em;
-    border: 1px solid #CCC;
-    border-radius: 1em;
-  }
-  
-  ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  form li + li {
-    margin-top: 1em;
-  }
-  
-  label {
-    /* Uniform size & alignment */
-    display: inline-block;
-    width: 90px;
-    text-align: right;
-  }
-  
-  input,
-  textarea {
-    /* To make sure that all text fields have the same font settings
-       By default, textareas have a monospace font */
-    font: 1em sans-serif;
-  
-    /* Uniform text field size */
-    width: 300px;
-    box-sizing: border-box;
-  
-    /* Match form field borders */
-    border: 1px solid #999;
-  }
-  
-  input:focus,
-  textarea:focus {
-    /* Additional highlight for focused elements */
-    border-color: #000;
-  }
-  
-  textarea {
-    /* Align multiline text fields with their labels */
-    vertical-align: top;
-  
-    /* Provide space to type some text */
-    height: 5em;
-  }
-  
-  .button {
-    /* Align buttons with the text fields */
-    padding-left: 90px; /* same size as the label elements */
-  }
-  
-  button {
-    /* This extra margin represent roughly the same space as the space
-       between the labels and their text fields */
-    margin-left: .5em;
-  }
-
-
-@media screen and (max-width: 900px) {
-    #hero, .home-grid {
+ @media screen and (max-width: 900px) {
+    #hero,
+    .home-grid {
         display: block;
         height: auto;
     }
-    nav, footer {
+
+    nav,
+    footer {
         flex-direction: column;
     }
+
     nav a {
         display: block;
         padding: 15px;
     }
+
     #hero {
         margin-top: 0;
     }
+
     #hero-msg {
         margin-top: 0;
     }
+
     #hero-msg h4 {
         display: none;
     }
+
     .home-title {
         font-size: 25px;
         color: #6f7364;
     }
-    .rivers-card, .camping-card, .rapids-card { 
+
+    .rivers-card,
+    .camping-card,
+    .rapids-card {
         margin: 50px auto;
         width: 60%;
     }
+
     #background {
         display: none;
     }
-    .mountains, .msg {
+
+    .mountains,
+    .msg {
         width: 80%;
         display: block;
         margin: 0 auto;
     }
+
     footer {
         margin-top: 25px;
     }
+
     .row {
-        display:block;
+        display: block;
     }
+
     .column {
         width: 90px;
     }
 }
-           
-
