--- a/web/STYLE/style.css
+++ b/web/STYLE/style.css
@@ -6,7 +6,7 @@ header {
 }
 
 header {
-    background-color: #062E84;
+    background-color: #b7a393;
 }
 
 nav {
@@ -16,10 +16,11 @@ nav {
 
 nav a {
     text-align: center;
-    color: beige;
+    color: black;
     text-decoration: none;
     padding: 35px;
 }
+
 body {
     font-family: 'Quicksand', 'Helvetica', Arial, sans-serif;
     background-color: #fcfbfb;
@@ -27,9 +28,11 @@ body {
     margin: 0;
     padding: 0;
 }
-h4,  h2{
+
+h4,
+h2 {
     color: black;
-    font-family: Quicksand;
+    font-family: "Playfair Display";
 }
 
 #banner {
@@ -46,7 +49,7 @@ h4,  h2{
     width: 40%;
     bottom: 100px;
     right: 100px;
-    background-color: black;
+    background-color: #b7a393;
     color: white;
     margin-left: 20px;
     margin-right: 20px;
@@ -75,13 +78,15 @@ img {
     max-width: 1600px;
     margin: 0 auto;
 }
+
 #line {
     margin-top: 50px;
     height: 20px;
-    text-align:center;
+    text-align: center;
     background-color: lightgray;
 }
-.purpose{
+
+.purpose {
     justify-content: space-between;
     display: grid;
     column-rule: 1px solid lightblue;
@@ -118,7 +123,7 @@ img {
 }
 
 footer {
-    background-color: #242d35;
+    background-color: #b7a393;
     padding: 25px 50px;
     margin-top: 200px;
     display: flex;
@@ -127,11 +132,11 @@ footer {
 }
 
 footer h3 {
-    color: #d9c2a3;
+    color: whitesmoke;
 }
 
 footer a {
-    color: #d9c2a3;
+    color: white;
     text-decoration: none;
 }
 
