--- a/web/STYLE/style.css
+++ b/web/STYLE/style.css
@@ -53,10 +53,11 @@ h2 {
     color: white;
     margin-left: 20px;
     margin-right: 20px;
+    padding: 20px;
 }
 
 img {
-    width: 80px;
+    width: 100%;
 }
 
 .logo {
@@ -90,9 +91,10 @@ img {
     justify-content: space-between;
     display: grid;
     column-rule: 1px solid lightblue;
-    grid-template-columns: repeat(2, 1fr)
+    grid-template-columns: repeat(2, 1fr);
+    padding: 25px;
+    gap: 20px;
 }
-
 
 .home-grid {
     justify-content: space-between;
