--- a/web/STYLE/style.css
+++ b/web/STYLE/style.css
@@ -22,6 +22,10 @@ nav a {
     text-decoration: none;
     padding: 35px;
 }
+nav a:hover {
+    background-color: #798E98;
+    color: black;
+}
 
 body {
     font-family: 'Quicksand', 'Helvetica', Arial, sans-serif;
