--- a/web/STYLE/style.css
+++ b/web/STYLE/style.css
@@ -262,13 +262,15 @@ input[type=submit]:hover {
 .mis {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    
+    padding-top: 80px;
+    padding-left: 10px;
     margin-left: 50px;
 }
 .vis {
     display: grid;
     grid-template-columns: repeat(2, 1fr);  
- 
+    padding-top: 80px;
+    padding-left: 10px;
     margin-left: 50px;
 }
 box-icon {
